Use StringUtils.isBlank in findProductsByDescription and getProductByCode methods